# SwarmCode

./: .env.example  .gitignore  COMPATIBILITY.md  README.md  config.yaml  legacy_compat.py  pyproject.toml  start.sh  test_comprehensive.py  test_structure.py
.github/workflows/: ci.yml
.qwen/: settings.json
orchestrator/: main.py  runner.py
orchestrator/agents/: architect.txt  developer.txt  qa.txt  reviewer.txt  security.txt  tester.txt
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  architect.py  base.py  developer.py  qa.py  reviewer.py  security.py  techwriter.py  tester.py
src/core/: __init__.py  context.py  orchestrator.py
src/gui/: __init__.py  webui.py
src/io/: __init__.py  file_manager.py  output_parser.py
src/providers/: __init__.py  base.py  claude_provider.py  factory.py  gemini_provider.py  gpt_provider.py  qwen_provider.py
src/templates/: __init__.py  library.py
src/tools/: __init__.py  local_tools.py
src/utils/: __init__.py  code_scorer.py  commit_generator.py  logger.py  security_validator.py
tests/: test_context.py  test_parser.py  test_providers.py  test_security.py
